--- a/pages/bookSearch/bookInfo/bookDetail.wxss
+++ b/pages/bookSearch/bookInfo/bookDetail.wxss
@@ -86,3 +86,9 @@ page {
   line-height: 2;
   text-align: justify;
 }
+
+.shareIcon {
+  width: 26px;
+  height: 26px;
+  vertical-align: middle;
+}
