update1.6Beta10版本
好书推荐榜下添加了触底推荐提示，完善了关于我们页面的内容；发布前隐藏了网费查询入口

--- a/pages/bookSearch/index.wxml
+++ b/pages/bookSearch/index.wxml
@@ -32,4 +32,7 @@
       </navigator>
     </block>
   </view>
+  <view wx:if="{{showTips}}">
+    <view class="logo-sub">想推荐好书上榜？欢迎发送意见留言</view>
+  </view>
 </view>
