--- a/pages/features/about.wxss
+++ b/pages/features/about.wxss
@@ -167,7 +167,7 @@
   color: #c2c2c2;
 }
 
-.footer-lanshan {
+.footer-beingshawn {
   font-size: 10pt;
   height: 10pt;
   line-height: 10pt;
@@ -177,7 +177,7 @@
   margin-bottom: 8rpx;
 }
 
-.footer-lanshan image {
+.footer-beingshawn image {
   width: 10pt;
   height: 10pt;
   margin-right: 5rpx;
