--- a/pages/net/netBind.wxml
+++ b/pages/net/netBind.wxml
@@ -37,7 +37,7 @@
             <view class="help-q">1、帐号和密码是什么？</view>
             <view class="help-a">
               <text>帐号：账号一般就是你的学号啦，我们会为您自动填入，且不可更改。如需更改，请在功能界面注销账号重新登录</text>
-              <text>密码：初始密码或者已更改密码</text>
+              <text>密码：上网账号的初始密码或者已更改密码</text>
               <text>其中初始密码与个人身份证号码相关，采用以下规则：①身份证号码：取最后12位作为密码；②身份证号码最后一位是x的默认大写</text>
             </view>
             <view class="help-q">2、忘记密码？</view>
