--- a/pages/error/queryerror.wxml
+++ b/pages/error/queryerror.wxml
@@ -7,13 +7,13 @@
       <icon type="info" size="93"></icon>
       <view class="icon-box__ctn">
         <view class="icon-box__title">无法查询</view>
-        <view class="icon-box__desc">您的成绩暂时无法查询，您可能没有登录。也可能是教务系统关闭😞</view>
+        <view class="icon-box__desc">您查询的信息暂时无法查询，您可能没有正确填写信息。也可能是本程序存在问题😞</view>
       </view>
     </view>
-    <button bindtap="goBack" class="weui-btn" type="default">登录重试</button>
+    <button bindtap="goBack" class="weui-btn" type="default">返回上页</button>
     <button bindtap="goIndex" class="weui-btn" type="primary">取消查询</button>
   </view>
-    <view class="weui-footer">
+  <view class="weui-footer  weui-footer_fixed-bottom">
     <view class="weui-footer__links">
       <navigator url="/pages/features/about" class="weui-footer__link">Airmole.</navigator>
       <navigator url="/pages/features/about" class="weui-footer__link">智慧校园</navigator>
