feedback or contact❓❓❓
在纠结于继续用原来的客服消息作为意见反馈呢？还是用小程序新出的原生意见反馈功能。。暂时倾向于继续contact,因为毕竟客服消息和用户的互动性比较强一点

--- a/pages/features/features.wxml
+++ b/pages/features/features.wxml
@@ -17,6 +17,7 @@
       </block>
       <view class="weui-grid" hover-class="weui-grid_active" style='height:96.200px;'>
         <button open-type="contact">
+          <!--把这里的contact改成feedback效果也不错，现在很纠结啊 -->
           <image class="weui-grid__icon" src="/images/service.png"></image>
           <text>意见留言</text>
         </button>
