--- a/pages/bookSearch/index.wxml
+++ b/pages/bookSearch/index.wxml
@@ -25,7 +25,7 @@
         </view>
         <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
           <view class="weui-media-box__title">{{item.title}}</view>
-          <view class="weui-media-box__desc">{{item.rating.average}}分</view>
+          <view class="weui-media-box__desc">豆瓣：{{item.rating.average}}分</view>
           <view class="weui-media-box__desc">作者：{{item.author[0]}}</view>
           <view class="weui-media-box__desc">{{item.publisher}}</view>
         </view>
