--- a/pages/score/showScore/showScore.wxml
+++ b/pages/score/showScore/showScore.wxml
@@ -1,26 +1,35 @@
 <!--pages/score/showScore/showScore.wxml-->
 <view class="page">
   <view class="page__hd">
-    <view class="page__title">成绩查询</view>
-    <!-- <view class="page__desc">本程序每次查询都会一次性查询您在校以来所有课程成绩记录，且不会保存数据记录。因此查询时间较长，请您耐心等待。查询完成后您的课程将按照最近时间顺序排序显示</view> -->
-    <view class="page__desc">加权分数暂时没有计算，需要的同学自己手动掰指头算下。后续会逐步完善加权分计算的功能</view>
+    <view class="page__title">♚成绩查询</view>
+    <view class="page__desc" style='color:#000'>现在，同学们不但可以查到成绩和加权分，还可以保存分享自己的成绩单啦！
+      <text>\r\n</text>注：最终成绩以教务为准，本程序计算结果仅作参考。学分为0或成绩低于60分的课程不纳入计算公式。</view>
   </view>
-  <view class="page__bd">
-    <view class="weui-cells__title">您的各科成绩：</view>
-    <view class="weui-cells weui-cells_after-title">
-      <view wx:for="{{jsonContent}}" wx:key="ClassName" class="weui-cell">
-        <view class="weui-cell__bd">{{item.class}}
+  <view class="ykt-detail-wraper" bindtap='GetScoreList' wx:if="{{jsonContent.data}}">
+    <image src='/images/GetScoreList.png' mode="widthFix" style='margin: 0 auto;'></image>
+  </view>
+  <block wx:for="{{jsonContent.data}}" wx:key="scoolYear">
+    <view class="page__bd" style='background-color:#fff;border-radius:15px;padding-bottom:20px;'>
+      <view class="weui-cells__title">{{item.time.schoolYear}}学年 第{{item.time.semester}}学期</view>
+      <view class="weui-cells weui-cells_after-title">
+        <view wx:for="{{item.score}}" wx:key="ClassName" class="weui-cell">
+          <view class="weui-cell__bd">{{item.courseName}}\r\n
+            <view class="page__desc">
+              授课教师：{{item.tearcher}} {{item.period}}学时 {{item.credit}}学分
+            </view>
+          </view>
+          <view class="weui-cell__ft" style='color:red;' wx:if="{{item.score<60}}">☠{{item.score}}</view>
+          <view class="weui-cell__ft" style='color:blue;' wx:elif="{{item.score > 90}}">♚{{item.score}}</view>
+          <view class="weui-cell__ft" style='color:#000;' wx:else>{{item.score}}</view>
         </view>
-        <view class="weui-cell__ft" style='color:#000000;'>{{item.score}}</view>
+      </view>
+      <view class="weui-media-box__info" style='color:#000;margin-left:10px;'>
+        <view class="weui-media-box__info__meta">学期总结：</view>
+        <view class="weui-media-box__info__meta">算术平均分：{{item.avg}}</view>
+        <view class="weui-media-box__info__meta weui-media-box__info__meta_extra">加权平均分：{{item.gpa}}</view>
       </view>
     </view>
-    <!-- <view wx:if="{{jsonContent[0].length>0}}" class="weui-btn-area">
-      <button plain='true' open-type="share" type="default" hover-class="other-button-hover">
-        <image class="weui-btn shareIcon" src='/images/share.png'></image>
-        分享我的成绩给朋友
-      </button>
-    </view> -->
-  </view>
+  </block>
   <view class="weui-footer">
     <view class="weui-footer__links">
       <text class="weui-footer__link">很奔放</text>
