--- a/pages/score/showScore/showScore.wxml
+++ b/pages/score/showScore/showScore.wxml
@@ -1,9 +1,7 @@
 <!--pages/score/showScore/showScore.wxml-->
 <view class="page">
   <view class="page__hd">
-    <view class="page__title">♚成绩查询</view>
-    <view class="page__desc" style='color:#000'>现在，同学们不但可以查到成绩和加权分，还可以保存分享自己的成绩单啦！
-      <text>\r\n</text>注：最终成绩以教务为准，本程序计算结果仅作参考。学分为0或成绩低于60分的课程不纳入计算公式。</view>
+    <view class="page__title">成绩查询</view>
   </view>
   <view class="ykt-detail-wraper" bindtap='GetScoreList' wx:if="{{jsonContent.data}}">
     <image src='/images/GetScoreList.png' mode="widthFix" style='margin: 0 auto;'></image>
@@ -18,8 +16,8 @@
               授课教师：{{item.tearcher}} {{item.period}}学时 {{item.credit}}学分
             </view>
           </view>
-          <view class="weui-cell__ft" style='color:red;' wx:if="{{item.score<60}}">☠{{item.score}}</view>
-          <view class="weui-cell__ft" style='color:blue;' wx:elif="{{item.score > 90}}">♚{{item.score}}</view>
+          <view class="weui-cell__ft" style='color:red;' wx:if="{{item.score<60}}">{{item.score}}</view>
+          <view class="weui-cell__ft" style='color:blue;' wx:elif="{{item.score > 90}}">{{item.score}}</view>
           <view class="weui-cell__ft" style='color:#000;' wx:else>{{item.score}}</view>
         </view>
       </view>
@@ -30,6 +28,11 @@
       </view>
     </view>
   </block>
+  <view class="page__hd">
+    <view class="page__desc" style='color:#000'>
+      注：最终成绩以教务为准，本程序计算结果仅作参考。学分为0或成绩低于60分的课程不纳入计算公式。
+    </view>
+  </view>
   <view class="weui-footer">
     <view class="weui-footer__links">
       <text class="weui-footer__link">很奔放</text>
